--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,307 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+  width: 100%;
+  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
+}
+
+h1{
+  font-weight: normal;
+}
+
+h2{
+  font-weight: normal;
+}
+
+hr.solidLine{
+  width: 300px;
+  border-top: 5px solid black;
+}
+
+header{
+  text-align: center;
+  padding: 25px 100px;
+  margin:auto;
+  /* max-width: 1200px; */
+  max-width: 100%;
+
+  /* background-color: bisque; */
+}
+
+header img{
+  height: 85px;
+  padding: 15px;
+}
+
+header img:hover{
+  cursor: pointer;
+}
+
+.titleHeader{
+  /*
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-gap: 40px;
+  */
+  display: flex;
+}
+
+nav{
+  margin: auto;
+  /* background-color: gray; */
+  width: 80%;
+}
+
+.navLinks ul{
+  list-style-type: none;
+  padding: 0 5px;
+  /* background-color: aliceblue; */
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* grid-gap: 0px; */
+
+}
+
+.navLinks ul li{
+  display: inline-block;
+  position: relative;
+
+}
+
+.navLinks ul li a{
+  padding: 10px 40px;
+  display: inline-block;
+  text-decoration: none;
+  /* color: rgb(0, 128, 0); */
+  color:black;
+
+  /* font-size: 30px; */
+  font-size: x-large;
+  font-weight: 400;
+
+  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Roboto', sans-serif;  */
+  /* font-family: 'Montserrat', sans-serif; */
+  /* font-family: 'Lato', sans-serif; */
+}
+
+nav ul li a:hover{
+  color: rgb(0, 0, 0);
+  font-style: italic;
+  text-decoration: underline;
+}
+
+main{
+  width: 100%;
+}
+
+
+/**** Footer Section ****/
+
+footer{
+  color: white;
+  background-color:rgb(27, 30, 35);
+
+  padding: 55px 0;
+
+  text-align: center;
+
+  display: grid;
+  grid-gap: 0 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.footerLogo img{
+
+  height: 120px;
+}
+
+.footerContact{
+  line-height: 10px;
+}
+
+.footerConnect h2{
+  font-weight: bold;
+}
+
+.footerConnect img{
+  height: 50px;
+}
+
+.footerLocations{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 40px;
+
+  justify-content: center;
+  align-items: center;
+}
+
+
+.socialMediaLinks{
+
+
+  justify-content: center;
+  align-items: center;
+}
+
+.socialMediaLinks a{
+  margin: 15px;
+}
+
+/**** reactive section still in progress END****/
+
+
+@media only screen and (max-width: 1150px){
+
+  header{
+    width: 100%;
+    padding: 25px 0;
+  }
+
+  .titleHeader{
+    width: 100%;
+    display: inline;
+    /*padding: auto;  no longer supported*/
+    margin: 0 auto;
+  }
+
+  nav{
+    width: 100%;
+  }
+
+  /**** Start Nav ****/
+  .navLinks ul{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0;
+    padding: 0;
+
+  }
+
+  .footerLocations{
+    display: grid;
+    grid-template-columns: 1fr ;
+    grid-gap: 5px;
+
+    justify-content: center;
+    align-items: center;
+
+
+  }
+
+}
+
+@media only screen and (max-width: 700px){
+  .navLinks ul li a{
+    padding: 0;
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  /* Add responsive CSS here */
+
+  header{
+    width: 100%;
+    padding: 25px 0;
+  }
+
+  .titleHeader{
+    width: 100%;
+    display: inline;
+    /*padding: auto;  no longer supported*/
+    margin: 0 auto;
+  }
+
+  /**** Start Nav ****/
+  .navLinks ul{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0;
+
+  }
+
+  .navLinks ul li a{
+    padding: 0;
+    font-size: 16px;
+  }
+  /**** END Nav ****/
+
+  /**** Start Hero ****/
+  .homeHero{
+    position: relative;
+    text-align: right;
+  }
+
+  /**** End Hero ****/
+
+  /**** Footer Section ****/
+
+  footer{
+
+    padding: 55px 0;
+
+    text-align: center;
+
+    display:block;
+
+  }
+
+  .footerLogo img{
+
+    height: 120px;
+    padding: 0 0 20px 0;
+  }
+
+  .footerContact{
+    line-height: 10px;
+  }
+
+  .footerConnect h2{
+    font-weight: bold;
+  }
+
+  .footerConnect img{
+    height: 50px;
+  }
+
+  .footerLocations{
+    display: grid;
+    grid-template-columns: 1fr ;
+    grid-gap: 5px;
+
+    justify-content: center;
+    align-items: center;
+
+
+  }
+
+
+  .socialMediaLinks{
+
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  .socialMediaLinks a{
+    margin: 15px;
+    text-decoration: none;
+  }
+
+  .socialMediaLinks{
+    text-decoration: none;
+  }
+
+  /**** Footer Section END****/
+
+}
