background images fixed
Still needs some sort of javascript or something

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -120,7 +120,7 @@ img{
   align-items: center;
 
   /*background-color:rgb(233, 233, 233);*/
-  /*background-image: url("../images/backgrounds/white_wall_hash.webp");*/
+  background-image: url("/assets/images/backgrounds/white_wall_hash.webp");
 
 }
 
