--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,23 +1,4 @@
-<!--
-<header>
-  <div class="titleHeader">
-    <div class="headerLogo">
-      <a href="index.html"> <img src="assets/images/LegalLabLogo.png" alt="LegalLogo"> </a>
-    </div>
-    <nav class="navLinks">
 
-      <ul>
-        <li><a routerLink="">Home</a></li>
-        <li><a routerLink="/about">About Us</a></li>
-        <li><a routerLink="/services">Services</a></li>
-        <li><a routerLink="/contact">Contact</a></li>
-      </ul>
-
-    </nav>
-
-  </div>
-</header>
--->
 
 <main>
   <div class="homeHero">
@@ -30,7 +11,7 @@
 
         <p>Providing tailor-made legal services for entrepreneurs and established business professionals. Are we the right fit for your legal needs?</p>
 
-        <a class="learnButton" href="services.html">Let’s Find Out!</a>
+        <a class="learnButton" routerLink="/services">Let’s Find Out!</a>
       </div>
     </div>
 
@@ -194,33 +175,36 @@
     <div class="practiceItems">
 
       <div class="practiceItem">
-        <a routerLink="services.html#commercial-residential"><img src="assets/images/Commercial-and-Residential.jpg" alt="commercial and residential"> </a>
+        <a routerLink="/services" fragment="commercial-residential"><img src="assets/images/Commercial-and-Residential.jpg" alt="commercial and residential"> </a>
 
         <h2>Commercial & Residential Real Estate Law</h2>
       </div>
 
       <div class="practiceItem">
-        <a routerLink="services.html#condo-development"><img src="assets/images/condo-and-development.jpg" alt="condo and development"></a>
+        <a routerLink="/services" fragment="condo-development"><img src="assets/images/condo-and-development.jpg" alt="condo and development"></a>
 
         <h2>Condominium & Development Law</h2>
       </div>
 
       <div class="practiceItem">
-        <a routerLink="services.html#secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a>
+        <!-- <a routerLink="services.html#secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a> -->
+        <a routerLink="/services" fragment="secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a>
 
         <h2>Secured Lending/Private Mortgages</h2>
       </div>
 
       <div class="practiceItem">
         <!--<a routerLink="services.html#corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>-->
-        <a routerLink="/services#corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>
+        <!--<a routerLink="/services#corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>-->
+        <a routerLink="/services" fragment="corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>
 
         <h2>Corporate & Commercial Law</h2>
       </div>
 
       <div class="practiceItem">
         <!--<a routerLink="services.html#commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a> -->
-        <a routerLink="/services#commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a>
+        <!--<a routerLink="/services#commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a>-->
+        <a routerLink="/services" fragment="commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a>
         <h2>Commercial Leasing</h2>
       </div>
 
@@ -231,52 +215,3 @@
   </section>
 
 </main>
-
-<!--
-<footer>
-
-  <div class="footerLogo">
-    <img src="assets/images/LegalLabLogo.png">
-  </div>
-
-  <div class="footerContact">
-
-    <h2>Contact Us</h2>
-
-    <br>
-
-    <div class="footerLocations">
-      <div class="contactLocItem">
-        <h3>Mississauga</h3>
-        <p>1370 Hurontario St.</p>
-        <p>Mississauga, Ontario</p>
-        <p>L5G 3H4</p>
-      </div>
-
-      <div class="contactLocItem">
-        <h3>Vaughan</h3>
-        <p>206-4550 Hwy 7</p>
-        <p>Woodbridge, Ontario</p>
-        <p>L4L 7B9</p>
-      </div>
-    </div>
-
-
-    <br>
-    <p>info@legallab.ca</p>
-
-  </div>
-
-  <div class="footerConnect">
-    <h2>Get Connected</h2>
-
-    <div class="socialMediaLinks">
-      <a href="https://www.instagram.com/legallab_law/?hl=en"> <img src="assets/images/Instagram_Glyph_Gradient.png">  </a>
-
-      <a href="https://ca.linkedin.com/company/legal-lab-law"><img src="assets/images/Linked-In-Bug.png"> </a>
-    </div>
-
-  </div>
-
-</footer>
--->
