--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -53,8 +53,8 @@
   justify-content: center;
   align-items: center;
 
-  background-color:rgb(233, 233, 233);
-  /*background-image: url("assets/images/backgrounds/white_wall_hash.webp");*/
+  /*background-color:rgb(233, 233, 233);*/
+  background-image: url("/assets/images/backgrounds/white_wall_hash.webp");
 
 }
 
