--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 
 
 <main>
+
   <div class="homeHero">
     <img src="assets/images/HandShake.jpg" alt="handshake">
 
@@ -29,7 +30,8 @@
   <div class ="welcomeToLegal">
 
     <div class="welcomeImage">
-      <img src="assets/images/meeting-client.jpg">
+      <!-- <img src="assets/images/meeting-client.jpg"> -->
+      <img ngSrc="assets/images/meeting-client.jpg" width="6000" height="4000" alt="meeting with client image">
     </div>
 
     <div class="welcomeText">
@@ -194,17 +196,21 @@
       </div>
 
       <div class="practiceItem">
-        <!--<a routerLink="services.html#corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>-->
-        <!--<a routerLink="/services#corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>-->
         <a routerLink="/services" fragment="corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>
 
         <h2>Corporate & Commercial Law</h2>
       </div>
 
       <div class="practiceItem">
-        <!--<a routerLink="services.html#commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a> -->
-        <!--<a routerLink="/services#commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a>-->
-        <a routerLink="/services" fragment="commercial-leasing"><img src="assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a>
+        <!--<a routerLink="/services" fragment="commercial-leasing"><img src="/assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a> -->
+        <a routerLink="/services" fragment="commercial-leasing">
+          <img
+            src="/assets/images/Commercial-Leasing-2048x1367.jpg"
+            alt="commercial leasing"
+            width="2048"
+            height="1367"
+          />
+        </a>
         <h2>Commercial Leasing</h2>
       </div>
 
@@ -213,5 +219,7 @@
 
 
   </section>
+
+
 
 </main>
