--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,6 @@
       </div>
     </div>
 
-
   </div>
 
 
@@ -44,7 +43,7 @@
 
   <div class="testimonialsSect">
 
-    <img src="assets/images/handshake-happy-people.jpg" alt="lawyers-and-client">
+    <img src="assets/images/handshake-happy-people.jpg" loading="lazy" alt="lawyers-and-client">
     <div class="testimonialsContainer">
 
       <div class="testBlock">
@@ -177,40 +176,50 @@
     <div class="practiceItems">
 
       <div class="practiceItem">
-        <a routerLink="/services" fragment="commercial-residential"><img src="assets/images/Commercial-and-Residential.jpg" alt="commercial and residential"> </a>
+        <a routerLink="/services" fragment="commercial-residential">
+          <img src="assets/images/Commercial-and-Residential.jpg" loading="lazy" alt="commercial and residential">
+        </a>
 
         <h2>Commercial & Residential Real Estate Law</h2>
       </div>
 
       <div class="practiceItem">
-        <a routerLink="/services" fragment="condo-development"><img src="assets/images/condo-and-development.jpg" alt="condo and development"></a>
+        <a routerLink="/services" fragment="condo-development">
+          <img src="assets/images/condo-and-development.jpg" loading="lazy" alt="condo and development">
+        </a>
 
         <h2>Condominium & Development Law</h2>
       </div>
 
       <div class="practiceItem">
         <!-- <a routerLink="services.html#secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a> -->
-        <a routerLink="/services" fragment="secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a>
+        <a routerLink="/services" fragment="secured-lending">
+          <img src="assets/images/Secured-Lending.jpg" loading="lazy" alt="secured landing">
+        </a>
 
         <h2>Secured Lending/Private Mortgages</h2>
       </div>
 
       <div class="practiceItem">
-        <a routerLink="/services" fragment="corporate-comm"><img src="assets/images/Corporate-Commercial-2048x1366.jpg" alt="corporate commercial"> </a>
+        <a routerLink="/services" fragment="corporate-comm">
+          <img src="assets/images/Corporate-Commercial-2048x1366.jpg" loading="lazy" alt="corporate commercial">
+        </a>
 
         <h2>Corporate & Commercial Law</h2>
       </div>
 
       <div class="practiceItem">
-        <!--<a routerLink="/services" fragment="commercial-leasing"><img src="/assets/images/Commercial-Leasing-2048x1367.jpg" alt="commercial leasing"> </a> -->
         <a routerLink="/services" fragment="commercial-leasing">
+          <img src="/assets/images/Commercial-Leasing-2048x1367.jpg" loading="lazy" alt="commercial leasing">
+        </a>
+        <!-- <a routerLink="/services" fragment="commercial-leasing">
           <img
-            src="/assets/images/Commercial-Leasing-2048x1367.jpg"
+            ngSrc="/assets/images/Commercial-Leasing-2048x1367.jpg"
             alt="commercial leasing"
             width="2048"
             height="1367"
           />
-        </a>
+        </a>-->
         <h2>Commercial Leasing</h2>
       </div>
 
