--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
 
     <div class="welcomeImage">
       <!-- <img src="assets/images/meeting-client.jpg"> -->
-      <img ngSrc="assets/images/meeting-client.jpg" width="6000" height="4000" alt="meeting with client image">
+      <img src="assets/images/meeting-client.jpg" alt="meeting with client image">
     </div>
 
     <div class="welcomeText">
@@ -46,91 +46,99 @@
     <img src="assets/images/handshake-happy-people.jpg" loading="lazy" alt="lawyers-and-client">
     <div class="testimonialsContainer">
 
-      <div class="testBlock">
+      <div class="testimonialBlock">
 
         <div class="testimonialTitleText">
           <h1>Testimonials</h1>
-
-          <div style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-          </div>
         </div>
 
-        <div class="testimonialBlock fade">
+        <div class="testimonialCarousel">
 
+          <ngb-carousel
+            #carousel
+            [interval]="4500"
+            [pauseOnHover]="pauseOnHover"
+            [pauseOnFocus]="pauseOnFocus"
+            [showNavigationArrows]="false"
 
-          <div class="testimonialText">
-            <h2>"...Dedicated, professional, and approachable"</h2>
+            style="height: 100%; background-color: rgba(2, 255, 255, 0);"
+          >
+          <ng-template ngbSlide class="testimonialSlide">
+            <div class="testimonialContent">
+              <div class="testimonialContentBlock">
 
-            <p>"Jennifer helped us with our first home purchase. She is dedicated, professional, and approachable. Jennifer went above and beyond to help us out when we had questions or issues. Also great pricing and lots of value."</p>
-          </div>
+                <div class="testimonialText">
+                  <h2>"...Dedicated, professional, and approachable"</h2>
+                  <br>
+                  <p>"Jennifer helped us with our first home purchase. She is dedicated, professional, and approachable.
+                    Jennifer went above and beyond to help us out when we had questions or issues. Also great pricing and lots of value."</p>
+                </div>
+                <div class="testimonialClient">
+                  <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                  <p>Fanyu Yang</p>
+                </div>
 
-          <div class="testimonialClient">
-            <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
-            <p>Fanyu Yang</p>
-            <p></p>
-          </div>
+              </div>
+            </div>
+          </ng-template>
 
+            <ng-template ngbSlide class="testimonialSlide">
+              <div class="testimonialContent">
+                <div class="testimonialContentBlock">
+                  <div class="testimonialText">
+                    <h2>"Would highly recommend her and her team as a lawyer myself!"</h2>
+                    <br>
+                    <p>
+                      "Jennifer is a knowledgeable, caring, and responsive lawyer. She helped us with our first home purchase and educated us about the process and risks.
+                      Jennifer was also a fierce, fair, and practical advocate for us when we encountered issues on closing.
+                      Her team is also great. Would highly recommend her and her team as a lawyer myself!"
+                    </p>
+                  </div>
+
+                  <div class="testimonialClient">
+                    <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <p>Harvey Lam</p>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+
+            <ng-template ngbSlide class="testimonialSlide">
+              <div class="testimonialContent">
+                <div class="testimonialContentBlock">
+                  <div class="testimonialText">
+                    <h2>"...Saved our deal and we are thankful"</h2>
+
+                    <p>"Great working with Sumeet. He saved our deal and we are thankful for his assistance."</p>
+                  </div>
+
+                  <div class="testimonialClient">
+                    <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <p>Desiree Candles</p>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+
+            <ng-template ngbSlide class="testimonialSlide">
+              <div class="testimonialContent">
+                <div class="testimonialContentBlock">
+                  <div class="testimonialText">
+                    <h2>"...Quick and efficient and very nice."</h2>
+
+                    <p>"Jennifer helped me with a legal document I needed.  She was quick and efficient and very nice."</p>
+                  </div>
+
+                  <div class="testimonialClient">
+                    <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <p>Janet Clare</p>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+
+          </ngb-carousel>
         </div>
-
-        <div class="testimonialBlock fade">
-
-          <div class="testimonialText">
-            <h2>"Would highly recommend her and her team as a lawyer myself!"</h2>
-
-            <p>
-              "Jennifer is a knowledgeable, caring, and responsive lawyer. She helped us with our first home purchase and educated us about the process and risks.
-
-              Jennifer was also a fierce, fair, and practical advocate for us when we encountered issues on closing.
-
-              Her team is also great. Would highly recommend her and her team as a lawyer myself!"
-            </p>
-          </div>
-
-          <div class="testimonialClient">
-            <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
-            <p>Harvey Lam</p>
-            <p></p>
-          </div>
-
-        </div>
-
-        <div class="testimonialBlock fade">
-
-          <div class="testimonialText">
-            <h2>"...Saved our deal and we are thankful"</h2>
-
-            <p>"Great working with Sumeet. He saved our deal and we are thankful for his assistance."</p>
-          </div>
-
-          <div class="testimonialClient">
-            <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
-            <p>Desiree Candles</p>
-            <p></p>
-          </div>
-
-        </div>
-
-        <div class="testimonialBlock fade">
-
-          <div class="testimonialText">
-            <h2>"...Quick and efficient and very nice."</h2>
-
-            <p>"Jennifer helped me with a legal document I needed.  She was quick and efficient and very nice."</p>
-          </div>
-
-          <div class="testimonialClient">
-            <p class="starRating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
-            <p>Janet Clare</p>
-            <p></p>
-          </div>
-
-        </div>
-
-
 
         <a
           class="testimonialButton"
@@ -142,29 +150,9 @@
 
     </div>
 
+
+
   </div>
-
-  <script>
-    let slideIndex = 0;
-    showSlides();
-
-    function showSlides() {
-      let i;
-      let slides = document.getElementsByClassName("testimonialBlock");
-      let dots = document.getElementsByClassName("dot");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) {slideIndex = 1}
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " active";
-      setTimeout(showSlides, 10000); // Change image every 2 seconds
-    }
-  </script>
 
   <section class="practiceAreas">
 
@@ -212,23 +200,11 @@
         <a routerLink="/services" fragment="commercial-leasing">
           <img src="assets/images/Commercial-Leasing-2048x1367.jpg" loading="lazy" alt="commercial leasing">
         </a>
-        <!-- <a routerLink="/services" fragment="commercial-leasing">
-          <img
-            ngSrc="/assets/images/Commercial-Leasing-2048x1367.jpg"
-            alt="commercial leasing"
-            width="2048"
-            height="1367"
-          />
-        </a>-->
         <h2>Commercial Leasing</h2>
       </div>
 
     </div>
 
-
-
   </section>
-
-
 
 </main>
