--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -67,7 +67,7 @@ img{
   color: white;
   transition-duration: 0.4s;
   display: inline-block;
-  width: 150px;
+  width: 300px;
   font-size: 20px;
   font-weight: bold;
   border: 5px solid white;
@@ -158,7 +158,6 @@ img{
 
 .testimonialsSect{
   position: relative;
-  /*height: 650px;*/
   height: 700px;
 
   color:whitesmoke;
@@ -182,10 +181,10 @@ img{
   right: 0;
 }
 
-.testBlock{
+.testimonialBlock{
 
   position: relative;
-  background-color: rgba(3, 3, 3, 0.5);
+  background-color: rgba(3, 3, 3, 0.63);
   width: 70%;
   min-width: 680px;
   height: 550px;
@@ -197,15 +196,42 @@ img{
 
   transform: translate(0, 75px);
 
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.testimonialCarousel{
+  height: 310px;
+  position: relative;
+  translate: 0 100px;
+}
+
+.testimonialContent{
+  height: 280px;
+  width: 95%;
+  margin: auto;
+
+  background-color: rgba(255, 2, 255, 0);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.testimonialContentBlock{
+  margin: 0;
+  padding: 0;
 }
 
 .testimonialTitleText{
+
   position: absolute;
   top: 0;
   left: 50%;
   font-size: larger;
   transform: translate(-50%, 0);
-
 
 }
 
@@ -213,15 +239,6 @@ img{
   font-size: 70px;
   padding-bottom: 0;
   margin-bottom: 0;
-}
-
-.testimonialBlock{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: large;
-  width: 90%;
 }
 
 .testimonialText{
@@ -241,7 +258,6 @@ img{
 
 .testimonialButton{
   position: absolute;
-  /* bottom: 80px; */
   bottom: 40px;
   left: 50%;
   transform: translate(-50%, 0);
@@ -249,7 +265,7 @@ img{
 
   color: white;
   display: inline-block;
-  width: 120px;
+  width: 320px;
   font-size: 20px;
   font-weight: bold;
   border: 5px solid white;
@@ -261,37 +277,8 @@ img{
 
 .testimonialButton:hover{
   background-color: white;
-  /* color: green; */
   color: black;
 }
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-  padding: 0;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 2.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
 
 /******** Testimonial Title Text ************/
 
@@ -360,7 +347,7 @@ img{
   }
 
   .herotext{
-    top: 0;
+    top: 80px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -448,17 +435,11 @@ img{
     right: 0;
   }
 
-  .testBlock{
+  .testimonialBlock{
 
     position: relative;
-    background-color: rgba(3, 3, 3, 0.5);
     width: 100%;
     height: 600px;
-    background-position: center;
-    background-size: cover;
-
-    margin-left: auto;
-    margin-right: auto;
 
     min-width: 0;
 
@@ -466,7 +447,17 @@ img{
 
   }
 
+  .testimonialCarousel{
+    height: 360px;
+    position: relative;
+    translate: 0 100px;
+  }
 
+  .testimonialContent{
+    height: 320px;
+    width: 95%;
+
+  }
 
   .testimonialTitleText h1{
     font-size: 55px;
@@ -490,21 +481,6 @@ img{
     object-position: center bottom;
   }
 
-  .herotext{
-    position: absolute;
-    bottom: 300px;
-    right: 200px;
-    text-align: right;
-    width: 100%;
-    height: 450px;
-
-    font-family: 'Open Sans', sans-serif;
-    /* font-family:'Roboto', sans-serif; */
-    /* font-family: 'Montserrat', sans-serif; */
-    /* font-family: 'Lato', sans-serif; */
-  }
-
-
   .heroTextContainer{
     position: absolute;
     top: 0;
@@ -518,13 +494,20 @@ img{
   }
 
   .herotext{
+    position: absolute;
+    height: 450px;
 
-    top: 0;
+    top: 80px;
     bottom: 0;
     left: 0;
     right: 0;
     text-align:center;
     width: 100%;
+
+    font-family: 'Open Sans', sans-serif;
+    /* font-family:'Roboto', sans-serif; */
+    /* font-family: 'Montserrat', sans-serif; */
+    /* font-family: 'Lato', sans-serif; */
   }
 
   .herotext h2{
@@ -602,25 +585,27 @@ img{
     right: 0;
   }
 
-  .testBlock{
+  .testimonialBlock{
 
-    position: relative;
-    background-color: rgba(3, 3, 3, 0.5);
     width: 100%;
     height: 700px;
-    background-position: center;
-    background-size: cover;
-
-    margin-left: auto;
-    margin-right: auto;
-
     min-width: 0;
-
     transform: translate(0, 75px);
 
   }
 
+  .testimonialCarousel{
+    height: 440px;
+  }
 
+  .testimonialContent{
+    height: 400px;
+  }
+
+  .testimonialSlide{
+    height: 100%;
+    width: 100%;
+  }
 
   .testimonialTitleText h1{
     font-size: 55px;
@@ -655,8 +640,6 @@ img{
     color: green;
     line-height: 0;
   }
-
-
 
   .practiceItems{
 
