contact card and font fixed
Fixed site wide font style
Adjusted sizes for fonts
Adjusted card sizes
Border lines still need correcting

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,10 @@
 /**** Footer Section ****/
 
+h3{
+  font-size: larger;
+  font-weight: bold;
+}
+
 footer{
   color: white;
   background-color:rgb(27, 30, 35);
