--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -104,8 +104,8 @@
   border-radius: 25px;
 
   /* max-width: 500px; */
-  width: 280px;
-  height: 220px;
+  width:320px;
+  height: 260px;
   min-width: 200px;
 
   border: 1px solid rgb(197, 197, 197);
@@ -117,8 +117,19 @@
   align-items: center;
 }
 
+.contactItem h2{
+  font-size: 24px;
+
+  padding-bottom: 8px;
+}
+
+.contactItem h3{
+  font-size: 18px;
+}
+
 
 .contactItem .contactInfo{
+
   text-align: left;
   overflow-wrap:break-word;
   padding: 0 0px 0px 25px ;
@@ -134,7 +145,8 @@
 .contactCardTable h4{
   text-align: left;
   padding: 0px;
-  line-height: 1px;
+  line-height: 38px;
+  font-size: 18px;
 }
 
 
