--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -161,10 +161,13 @@
     <section class="locSect">
 
 
-      <hr class="solidLine">
+      <!-- <hr class="solidLine">-->
+
+      <hr />
       <br>
 
       <h1>Offices:</h1>
+      <br>
 
       <div class="locations">
         <section class="location-item">
