--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -156,7 +156,9 @@
 
   <section class="practiceAreas">
 
-    <hr class="solidLine">
+    <!-- <hr class="solidLine"> -->
+
+    <hr/>
 
     <h1>Practice Areas</h1>
     <p>Here's how we can help you!</p>
