--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -54,7 +54,7 @@
   align-items: center;
 
   /*background-color:rgb(233, 233, 233);*/
-  background-image: url("/assets/images/backgrounds/white_wall_hash.webp");
+  background-image: url("../../../assets/images/backgrounds/white_wall_hash.webp");
 
 }
 
