--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -121,7 +121,7 @@ img{
   align-items: center;
 
   /*background-color:rgb(233, 233, 233);*/
-  background-image: url("/../../../assets/images/backgrounds/white_wall_hash.webp");
+  background-image: url("../../../assets/images/backgrounds/white_wall_hash.webp");
 
 }
 
@@ -532,7 +532,7 @@ img{
 
     display:block;
 
-    padding: 120px 0px;
+    padding: 120px 0;
 
     justify-content: center;
     align-items: center;
