Updated About section to have new employee
Also updated Sandra's bio

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -72,11 +72,22 @@
 
         <br>
         <h2>Sandra Gill</h2>
-        <br>
         <h3>Senior Corporate and Commercial Real Estate Clerk</h3>
         <br>
         <p>
+          Sandra joins us from a mid-size law firm and has over 25 years of experience in M&A Transactions, Commercial Real Estate and Secured Lending Transactions. Sandra works closely with Jennifer and Sumeet on all corporate transactions, including complex M&A Transactions, commercial financing matters, incorporations, corporate amendments, continuances, dissolutions, corporate reorganizations and corporate maintenance. Sandra has extensive experience in drafting complex share attributes for complex incorporations and amendments.   Sandra has been a member of The Institution of Law Clerks of Ontario since 1995.  Sandra also leads our “special projects” and is an indispensable member of our team.
+        </p>
+      </div>
 
+      <div class="ourTeamItem">
+        <!-- <img src="images/stock-female-small.jpg"> -->
+
+        <br>
+        <h2>Shirisha Modoor</h2>
+        <h3>Senior Real Estate Clerk</h3>
+        <br>
+        <p>
+          Shirisha is our lead residential clerk. She handles all residential purchase, sale and refinance transactions. With more than 20 years of real estate experience she thrives in the chaos of a transactional practice.
         </p>
       </div>
 
