updated contact and about
added new team members
added description for pam
added fax icon
rearranged contact info

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -60,10 +60,10 @@
         <img src="assets/images/Pam_8_817.jpg" alt="Pam Angad">
 
         <h2>Pam Angad</h2>
-        <h3>Real Estate Clerk</h3>
+        <h3>Senior Real Estate Clerk</h3>
         <br>
         <p>
-
+          Pamela joined Legal Lab in August 2022 and is our lead commercial real estate clerk. Pamela has over 10 years of real estate experience and handles acquisitions, dispositions and refinancing files.
         </p>
       </div>
 
@@ -88,6 +88,18 @@
         <br>
         <p>
           Shirisha is our lead residential clerk. She handles all residential purchase, sale and refinance transactions. With more than 20 years of real estate experience she thrives in the chaos of a transactional practice.
+        </p>
+      </div>
+
+      <div class="ourTeamItem">
+        <!-- <img src="images/stock-female-small.jpg"> -->
+
+        <br>
+        <h2>Klara</h2>
+        <h3>Residential Real Estate Clerk</h3>
+        <br>
+        <p>
+
         </p>
       </div>
 
