--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -29,6 +29,15 @@
             </tr>
             <tr>
               <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>jl@legallab.ca</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
                 <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
               </td>
@@ -38,13 +47,14 @@
             </tr>
             <tr>
               <td>
-                <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
               </td>
               <td>
-                <h4>jl@legallab.ca</h4>
+                <h4>1-888-437-1252</h4>
               </td>
             </tr>
+
           </table>
 
         </div>
@@ -64,6 +74,15 @@
             </tr>
             <tr>
               <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>ss@legallab.ca</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
                 <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
               </td>
@@ -73,11 +92,11 @@
             </tr>
             <tr>
               <td>
-                <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
               </td>
               <td>
-                <h4>ss@legallab.ca</h4>
+                <h4>1-888-437-1252</h4>
               </td>
             </tr>
           </table>
@@ -89,12 +108,21 @@
       <div class="contactItem">
         <div class="contactInfo">
           <h2>Pam Angad</h2>
-          <h3>Real Estate Clerk</h3>
+          <h3>Senior Real Estate Clerk</h3>
 
           <table class="contactCardTable">
             <tr>
               <th style="width:45px;"></th>
               <th></th>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>pamela@legallab.ca</h4>
+              </td>
             </tr>
             <tr>
               <td>
@@ -107,11 +135,11 @@
             </tr>
             <tr>
               <td>
-                <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
               </td>
               <td>
-                <h4>pamela@legallab.ca</h4>
+                <h4>1-888-437-1252</h4>
               </td>
             </tr>
           </table>
@@ -131,6 +159,16 @@
               <th style="width:45px;"></th>
               <th></th>
             </tr>
+
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>sandra@legallab.ca</h4>
+              </td>
+            </tr>
             <tr>
               <td>
                 <!-- icon obtained from https://icons8.com/icons/set/phone -->
@@ -142,16 +180,101 @@
             </tr>
             <tr>
               <td>
-                <!-- icon obtained from https://icons8.com/icons/set/email -->
-                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
               </td>
               <td>
-                <h4>sandra@legallab.ca</h4>
+                <h4>1-888-437-1252</h4>
               </td>
             </tr>
           </table>
         </div>
+      </div>
 
+      <div class="contactItem">
+        <div class="contactInfo">
+
+          <h2>Shirisha Modoor</h2>
+          <h3>Senior Real Estate Clerk</h3>
+
+          <table class="contactCardTable">
+            <tr>
+              <th style="width:45px;"></th>
+              <th></th>
+            </tr>
+
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>sm@legallab.ca </h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/phone -->
+                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>647-767-7406</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>1-888-437-1252</h4>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div class="contactItem">
+        <div class="contactInfo">
+
+          <h2>Klara</h2>
+          <h3>Residential Real Estate Clerk</h3>
+
+          <table class="contactCardTable">
+            <tr>
+              <th style="width:45px;"></th>
+              <th></th>
+            </tr>
+
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/email -->
+                <img src="assets/images/icons/icons8-email-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>kl@legallab.ca</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/phone -->
+                <img src="assets/images/icons/icons8-phone-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>905-990-0081</h4>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <!-- icon obtained from https://icons8.com/icons/set/fax -->
+                <img src="assets/images/icons/icons8-fax-30.png" style="height: 30px; object-fit: contain;">
+              </td>
+              <td>
+                <h4>1-888-437-1252</h4>
+              </td>
+            </tr>
+          </table>
+        </div>
       </div>
 
     </div>
