--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -15,6 +15,13 @@
 
     <br>
 
+    <hr />
+
+    <br>
+
+    <h1>Team:</h1>
+    <br>
+
     <div class="contacts">
 
       <div class="contactItem">
