added last name to klara
updated site. storing contact page new version

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -97,7 +97,7 @@
         <!-- <img src="images/stock-female-small.jpg"> -->
 
         <br>
-        <h2>Klara</h2>
+        <h2>Klara Lallinaj</h2>
         <h3>Residential Real Estate Clerk</h3>
         <br>
         <p>
