--- a/src/app/components/contact2/contact2.component.html
+++ b/src/app/components/contact2/contact2.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <section class="contactSection">
-
+    <p>Contact 2</p>
     <h1>We are conveniently located in the Mineola region of south Mississauga and East Woodbridge . Stop by and visit us at one of our locations  or contact us with any inquiries you may have.</h1>
 
     <br>
@@ -26,6 +26,12 @@
 
       <div class="contactItem">
         <div class="contactInfo">
+          <div class="contactPic">
+            <img src="assets/images/Jennifer_2.jpg" alt="Jennifer Labrecque">
+          </div>
+
+          <br>
+
           <h2>Jennifer Labrecque</h2>
           <h3>Lawyer</h3>
 
@@ -244,7 +250,7 @@
       <div class="contactItem">
         <div class="contactInfo">
 
-          <h2>Klara Lallinaj</h2>
+          <h2>Klara</h2>
           <h3>Residential Real Estate Clerk</h3>
 
           <table class="contactCardTable">
@@ -325,3 +331,4 @@
 
 
 </main>
+
