Added bio and new build
added bio for Klara

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -101,7 +101,7 @@
         <h3>Residential Real Estate Clerk</h3>
         <br>
         <p>
-
+          Klara joined our firm in June 2023. Klara is our intake clerk and assist with residential transactions and interim occupancies.
         </p>
       </div>
 
