Added assets folder for team images
Team photos are now in a dedicated folder in assets images.

Updated images for Jennifer, Klara, and Shirisha

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -35,7 +35,7 @@
     <div class="ourTeamItems">
 
       <div class="ourTeamItem">
-        <img src="assets/images/Jennifer_2.jpg" alt="Jennifer Labrecque">
+        <img src="../../../assets/images/team/Jennifer_L.png" alt="Jennifer Labrecque">
 
         <h2>Jennifer Labrecque</h2>
         <h3>Lawyer</h3>
@@ -46,7 +46,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <img src="assets/images/Sumeet_7_1100.jpg" alt="Sumeet Singh">
+        <img src="../../../assets/images/team/Sumeet_7_1100.jpg" alt="Sumeet Singh">
 
         <h2>Sumeet Singh</h2>
         <h3>Lawyer</h3>
@@ -59,7 +59,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <img src="assets/images/Pam_8_817.jpg" alt="Pam Angad">
+        <img src="../../../assets/images/team/Pam_8_817.jpg" alt="Pam Angad">
 
         <h2>Pam Angad</h2>
         <h3>Senior Real Estate Clerk</h3>
@@ -82,7 +82,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <!-- <img src="images/stock-female-small.jpg"> -->
+        <img src="../../../assets/images/team/Shirisha_M.jpeg" alt="Shirisha Modoor">
 
         <br>
         <h2>Shirisha Modoor</h2>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <!-- <img src="images/stock-female-small.jpg"> -->
+        <img src="../../../assets/images/team/Klara_L.jpeg" alt="Klara Lallinaj">
 
         <br>
         <h2>Klara Lallinaj</h2>
