--- a/src/app/components/contact2/contact2.component.html
+++ b/src/app/components/contact2/contact2.component.html
@@ -27,7 +27,7 @@
       <div class="contactItem">
         <div class="contactInfo">
           <div class="contactPic">
-            <img src="assets/images/Jennifer_2.jpg" alt="Jennifer Labrecque">
+            <img src="../../../assets/images/team/Jennifer_2.jpg" alt="Jennifer Labrecque">
           </div>
 
           <br>
