Updated team images
all team images updated

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <img src="../../../assets/images/team/Sumeet_7_1100.jpg" alt="Sumeet Singh">
+        <img src="../../../assets/images/team/Sumeet_S.PNG" alt="Sumeet Singh">
 
         <h2>Sumeet Singh</h2>
         <h3>Lawyer</h3>
@@ -59,7 +59,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <img src="../../../assets/images/team/Pam_8_817.jpg" alt="Pam Angad">
+        <img src="../../../assets/images/team/Pam_A.jpeg" alt="Pam Angad">
 
         <h2>Pam Angad</h2>
         <h3>Senior Real Estate Clerk</h3>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="ourTeamItem">
-        <!-- <img src="images/stock-female-small.jpg"> -->
+        <img src="../../../assets/images/team/Sandra_G.PNG" alt="Sandra Gill">
 
         <br>
         <h2>Sandra Gill</h2>
