Adjusted row layout for services and practices
Client wanted two rows, first with 2 columns and the second with 3.

commercil & Residential Real Estate law and Corpoorate at the top

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -166,45 +166,50 @@
 
     <div class="practiceItems">
 
-      <div class="practiceItem">
-        <a routerLink="/services" fragment="commercial-residential">
-          <img src="assets/images/Commercial-and-Residential.jpg" loading="lazy" alt="commercial and residential">
-        </a>
+      <div class="practiceItems-row1">
+        <div class="practiceItem practice-residential">
+          <a routerLink="/services" fragment="commercial-residential">
+            <img src="assets/images/Commercial-and-Residential.jpg" loading="lazy" alt="commercial and residential">
+          </a>
 
-        <h2>Commercial & Residential Real Estate Law</h2>
+          <h2>Commercial & Residential Real Estate Law</h2>
+        </div>
+
+        <div class="practiceItem practice-corporate">
+          <a routerLink="/services" fragment="corporate-comm">
+            <img src="assets/images/Corporate-Commercial-2048x1366.jpg" loading="lazy" alt="corporate commercial">
+          </a>
+
+          <h2>Corporate & Commercial Law</h2>
+        </div>
       </div>
 
-      <div class="practiceItem">
-        <a routerLink="/services" fragment="corporate-comm">
-          <img src="assets/images/Corporate-Commercial-2048x1366.jpg" loading="lazy" alt="corporate commercial">
-        </a>
+      <div class="practiceItems-row2">
+        <div class="practiceItem practice-condo">
+          <a routerLink="/services" fragment="condo-development">
+            <img src="assets/images/condo-and-development.jpg" loading="lazy" alt="condo and development">
+          </a>
 
-        <h2>Corporate & Commercial Law</h2>
+          <h2>Condominium & Development Law</h2>
+        </div>
+
+        <div class="practiceItem practice-lending">
+          <!-- <a routerLink="services.html#secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a> -->
+          <a routerLink="/services" fragment="secured-lending">
+            <img src="assets/images/Secured-Lending.jpg" loading="lazy" alt="secured landing">
+          </a>
+
+          <h2>Secured Lending/Private Mortgages</h2>
+        </div>
+
+        <div class="practiceItem practice-leasing">
+          <a routerLink="/services" fragment="commercial-leasing">
+            <img src="assets/images/Commercial-Leasing-2048x1367.jpg" loading="lazy" alt="commercial leasing">
+          </a>
+          <h2>Commercial Leasing</h2>
+        </div>
       </div>
 
-      <div class="practiceItem">
-        <a routerLink="/services" fragment="condo-development">
-          <img src="assets/images/condo-and-development.jpg" loading="lazy" alt="condo and development">
-        </a>
-
-        <h2>Condominium & Development Law</h2>
-      </div>
-
-      <div class="practiceItem">
-        <!-- <a routerLink="services.html#secured-lending"><img src="assets/images/Secured-Lending.jpg" alt="secured landing"></a> -->
-        <a routerLink="/services" fragment="secured-lending">
-          <img src="assets/images/Secured-Lending.jpg" loading="lazy" alt="secured landing">
-        </a>
-
-        <h2>Secured Lending/Private Mortgages</h2>
-      </div>
-
-      <div class="practiceItem">
-        <a routerLink="/services" fragment="commercial-leasing">
-          <img src="assets/images/Commercial-Leasing-2048x1367.jpg" loading="lazy" alt="commercial leasing">
-        </a>
-        <h2>Commercial Leasing</h2>
-      </div>
 
     </div>
 
