--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -156,7 +156,7 @@ img{
 /**** Welcome to Legal Section END****/
 
 /***** Testimonials Section **********/
-
+/*
 .testimonialsSect{
   position: relative;
   height: 700px;
@@ -280,6 +280,7 @@ img{
   background-color: white;
   color: black;
 }
+ */
 
 /******** Testimonial Title Text ************/
 
@@ -307,7 +308,7 @@ img{
   font-size: x-large;
 }
 
-.practiceItems{
+.practiceItems, .practiceItems-row1, .practiceItems-row2{
 
   display: flex;
   gap: 20px;
@@ -317,6 +318,17 @@ img{
   justify-content: center;
 
 }
+
+/*.practiceItems-row1, .practiceItems-row2{*/
+
+/*  display: flex;*/
+/*  gap: 20px;*/
+/*  margin-top: 20px;*/
+/*  flex-wrap: wrap;*/
+
+/*  justify-content: center;*/
+
+/*}*/
 
 .practiceItems img{
   width: 100%;
@@ -642,6 +654,7 @@ img{
     line-height: 0;
   }
 
+  /*
   .practiceItems{
 
     display: flex;
@@ -652,6 +665,7 @@ img{
     justify-content: center;
 
   }
+*/
 
   .practiceItem{
     flex: 450px;
